atualização de documentos

--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
+    <!--Impedir a execução de scripts externos ou não autorizados-->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+
 </head>
 <body>
     <h1>Sobre</h1>
