--- a/src/views/child.html
+++ b/src/views/child.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janela Secundaria</title>
+    <!--Impedir a execução de scripts externos ou não autorizados-->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 <body>
     <h1>Janela Secundaria</h1>
