--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!--CSS personalizado-->
     <link rel="stylesheet" href="../public/css/style.css">
+    <!--Impedir a execução de scripts externos ou não autorizados-->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 <body>
     <div class="container">
