--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electron Tutorial</title>
-    <!--Bootstrap.css-->
+    <!-- Bootstrap.css -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
-    <!--CSS personalizado-->
+    <!-- CSS personalizado -->
     <link rel="stylesheet" href="../public/css/style.css">
-    <!--Impedir a execução de scripts externos ou não autorizados-->
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+    <!-- Impedir a execução de scripts externos ou não autorizados -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
 </head>
 <body>
-    <div class="container">
-        <h1>Hello Electron</h1>
+    <div class="container button">
+        <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes">
+        <img src="../public/img/os.png" alt="computador" title="Emissão de OS">
     </div>
     
-    <!--Bootstrap-->
-    <script src="../public/js/bootstrap.bundle.min.js"></script>
+    <footer>
+        <!-- Exibição da data atual -->
+        <p id="dataAtual"></p>
+    </footer>
 
+    <!-- Bootstrap -->
+    <script src="../public/js/bootstrap.bundle.min.js"></script>
+    <script src="../public/js/script.js"></script>
 </body>
 </html>
