atualização de documentos

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,9 +12,10 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
 </head>
 <body>
+    
     <div class="container button">
-        <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes">
-        <img src="../public/img/os.png" alt="computador" title="Emissão de OS">
+        <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes" onclick="client()">
+        <img src="../public/img/os.png" alt="computador" title="Emissão de OS" onclick="os()">
     </div>
     
     <footer>
@@ -24,6 +25,9 @@
 
     <!-- Bootstrap -->
     <script src="../public/js/bootstrap.bundle.min.js"></script>
+     <!--Scripts-->
     <script src="../public/js/script.js"></script>
+     <!-- Renderizador-->
+     <script src="renderer.js"></script>
 </body>
 </html>
