--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janela Secundaria</title>
+    <title> clientes</title>
     <!--Bootstrap.css-->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!--CSS personalizado-->
@@ -13,7 +13,10 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' ">
 </head>
 <body>
-    <h1>Janela Secundaria</h1>
+    <div class="container" >
+        <h1>clientes</h1>
+    </div>
+    
     <!--Bootstrap-->
     <script src="../public/js/bootstrap.bundle.min.js"></script>
 
