atualização de documentos 12-03-2025

--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -47,7 +47,8 @@
              <!--CEP -->
              <div class="col-md-2">
                 <label for="inputCEPClient" class="form-label">CEP</label>
-                <input type="text" class="form-control" id="inputCEPClient" spellcheck="false" required maxlength="10">
+                <input type="text" class="form-control" id="inputCEPClient" spellcheck="false" required maxlength="10" onblur="buscarCEP()">
+                <!--perder o foco onblur -->
             </div>
               <!--Logradouro -->
             <div class="col-md-6">
@@ -120,6 +121,7 @@
     
     <!--Bootstrap-->
     <script src="../public/js/bootstrap.bundle.min.js"></script>
-
+    <!--Renderizador-->
+    <script src="rendererCliente.js"></script>
 </body>
 </html>
