--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -7,17 +7,22 @@
     border: 1px solid #e8e8e8;
     cursor: pointer;
 }
+/* roda pé*/
 footer {
     width: 100%;
     height: 50px;
-    text-align: center;
     background-color: blue;
     position: fixed;
     bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
 }
 footer p {
     color: #ffffff;
     padding: 7px;
+    
+    
 }
 /* Botão Reset */
 #btnReset {
