--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,6 +21,7 @@
     <footer>
         <!-- Exibição da data atual -->
         <p id="dataAtual"></p>
+        <img src="../public/img/dboff.png" alt="dbicon" id="statusdb">
     </footer>
 
     <!-- Bootstrap -->
