Documentação da Atividade

--- a/src/views/os.html
+++ b/src/views/os.html
@@ -31,9 +31,9 @@
 
             <!-- Buscar cliente -->
             <div class="col-md-5">
-                <label for="inputSearchClient" class="form-label">Buscar Cliente</label>
+                <label for="inputSearchClientOs" class="form-label">Buscar Cliente</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="inputSearchClient" spellcheck="false" required maxlength="30">
+                    <input type="text" class="form-control" id="inputSearchClientOs" spellcheck="false" required maxlength="30">
                     <span class="input-group-text">
                         <img src="../public/img/search.png" alt="lupa" width="20">
                     </span>
