--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -7,6 +7,16 @@
     border: 1px solid #e8e8e8;
     cursor: pointer;
 }
+
+/* logo*/
+#logo {
+    position: fixed;
+    bottom: 40px;
+    border: none;
+    cursor: none;
+}
+
+
 /* roda pé*/
 footer {
     width: 100%;
@@ -18,18 +28,20 @@ footer {
     justify-content: space-between;
     padding: 5px;
 }
+
 footer p {
     color: #ffffff;
     padding: 7px;
-    
-    
+
+
 }
+
 /* Botão Reset */
 #btnReset {
-   width: 48px;
-   height: 48px;
-   background-image: url('../img/vassoura.png');
-   border: none;
-   cursor: pointer; 
-   margin-left: 10px;
+    width: 48px;
+    height: 48px;
+    background-image: url('../img/vassoura.png');
+    border: none;
+    cursor: pointer;
+    margin-left: 10px;
 }
