--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,6 +16,7 @@
     <div class="container button">
         <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes" onclick="client()">
         <img src="../public/img/os.png" alt="computador" title="Emissão de OS" onclick="os()">
+        <img src="../public/img/TEC_SANCHES.png" alt="logo" id="logo">
     </div>
     
     <footer>
