--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -20,7 +20,7 @@
                 <input type="text" class="form-control" id="searchClient" maxlength="30" spellcheck="false" >
             </div>
             <div class="col-md-4">
-                <button type="button" class="btn btn-dark" id="btnRead" onclick="searchClient()" >Buscar</button>
+                <button type="button" class="btn btn-dark" id="btnRead" onclick="buscarCliente()" >Buscar</button>
             </div>
             <!--Linha-->
             <hr class="mt-4 border border-primary border -1" >
