--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -24,6 +24,10 @@
             </div>
             <!--Linha-->
             <hr class="mt-4 border border-primary border -1" >
+            <!--ID do cliente (oculto)-->
+            <input type="text" id="idClient">
+
+
             <!--Nome Cliente-->
             <div class="col-md-7">
                 <label for="inputNameClient" class="form-label">Nome</label>
@@ -113,7 +117,7 @@
              <div class="mt-5" >
                 <button type="submit" class="btn btn-success" id="btnCreate">Adiconar</button>
                 <button type="submit" class="btn btn-warning" id="btnUpdate">Editar</button>
-                <button type="button" class="btn btn-danger" id="btnDelete">Excluir</button>
+                <button type="button" class="btn btn-danger" id="btnDelete" onclick="apagarCliente()">Excluir</button>
                 <button type="reset" class="btn" id="btnReset" onclick="resetForm()"></button>
              </div>
         </form>
