--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
-/*Botões (tela pricipal ) */
 
+/* Botões (tela principal) */
 .button img {
     margin: 50px 15px 25px 15px;
     padding: 5px;
@@ -8,23 +8,35 @@
     cursor: pointer;
 }
 
-/* logo*/
+/* Botão reset */
+#btnReset {
+    width: 48px;
+    height: 48px;
+    background-image: url('../img/clear.png');
+    border: none;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+/* logo */
 #logo {
     position: fixed;
     bottom: 40px;
+    right: 5px;
     border: none;
     cursor: none;
 }
-/*ocultado o campo id do cliente*/
+
+/* ocultar o campo id do cliente */
 #idClient {
     display: none;
 }
 
-/* roda pé*/
+/* rodapé */
 footer {
     width: 100%;
-    height: 50px;
-    background-color: blue;
+    height: 55px;   
+    background-color: #0078d7;
     position: fixed;
     bottom: 0;
     display: flex;
@@ -34,17 +46,12 @@ footer {
 
 footer p {
     color: #ffffff;
-    padding: 7px;
-
-
+    padding-top: 7px;
+    font-size: 1.2em;    
 }
 
-/* Botão Reset */
-#btnReset {
-    width: 48px;
-    height: 48px;
-    background-image: url('../img/vassoura.png');
-    border: none;
-    cursor: pointer;
-    margin-left: 10px;
+/* lista de clientes vinculados a OS */
+#viewListSuggestion {
+    z-index: 2;
+    max-width: 382px;
 }
