--- a/src/views/os.html
+++ b/src/views/os.html
@@ -31,13 +31,21 @@
 
             <!-- Buscar cliente -->
             <div class="col-md-5">
-                <label for="inputSearchClientOs" class="form-label">Buscar Cliente</label>
+                <label for="inputSearchClient" class="form-label">Buscar Cliente</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="inputSearchClientOs" spellcheck="false" required maxlength="30">
+                    <input type="text" class="form-control" id="inputSearchClient" spellcheck="false" required maxlength="30">
                     <span class="input-group-text">
                         <img src="../public/img/search.png" alt="lupa" width="20">
                     </span>
                 </div>
+            <!-- Lista de sugestões - estilo Google -->
+            <ul id="viewListSuggestion" class="list-group position-absolute w-100"></ul>     
+            </div>
+ 
+            <!-- Id -->
+            <div class="col-md-4">
+                <label for="inputIdClient" class="form-label">Id do cliente</label>
+                <input type="text" class="form-control" id="inputIdClient" spellcheck="false" maxlength="15" disabled>
             </div>
 
             <!-- Nome -->
@@ -51,13 +59,9 @@
                 <label for="inputPhoneClient" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="inputPhoneClient" spellcheck="false" maxlength="15"
                     disabled>
-            </div>
+            </div>            
 
-            <!-- CPF -->
-            <div class="col-md-4">
-                <label for="inputCPFClient" class="form-label">CPF</label>
-                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" disabled>
-            </div>
+            <input type="text" id="idClient"> <!-- oculto -->
 
             <!-- Linha -->
             <hr class="mt-4 border border-secondary border -1">
@@ -112,15 +116,19 @@
 
             <div class="mt-4 d-flex justify-content-center gap-1">
                 <button type="button" class="btn btn-success">Gerar OS</button>
-                <button type="button" class="btn btn-primary">Buscar OS</button>
+                <button type="button" class="btn btn-primary" onclick="inputOS()">Buscar OS</button>
                 <button type="button" class="btn btn-warning">Editar OS</button>
                 <button type="button" class="btn btn-danger">Excluir OS</button>
                 <button type="button" class="btn btn-secondary">Imprimir OS</button>
+                <button type="reset" class="btn" id="btnReset" onclick="resetForm()"></button>
         </form>
     </div>
-
+    
     <!-- Bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
+
+    <script src="rendererOS.js"></script>
+    
 </body>
 
 </html>
