--- a/src/views/os.html
+++ b/src/views/os.html
@@ -15,47 +15,52 @@
 
 <body>
     <div class="container">
-        <form class="mt-2 row g-3">
+        <form class="mt-2 row g-3" id="frmOS">
 
             <!-- OS -->
             <div class="col-md-4">
                 <label class="form-label">Nº OS</label>
-                <input type="text" class="form-control" id="txtOs" disabled>
+                <input type="text" class="form-control" id="inputOS" disabled>
             </div>
 
             <!-- Data -->
             <div class="col-md-3">
                 <label class="form-label">Data</label>
-                <input type="text" class="form-control" id="txtData" disabled>
+                <input type="text" class="form-control" id="inputData" disabled>
             </div>
 
             <!-- Buscar cliente -->
             <div class="col-md-5">
+               
+            </div>
+ 
+            <!-- Buscar cliente -->
+            <div class="col-md-4">
                 <label for="inputSearchClient" class="form-label">Buscar Cliente</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="inputSearchClient" spellcheck="false" required maxlength="30">
+                    <input type="text" class="form-control" id="inputSearchClient" spellcheck="false" maxlength="30">
                     <span class="input-group-text">
                         <img src="../public/img/search.png" alt="lupa" width="20">
                     </span>
                 </div>
-            <!-- Lista de sugestões - estilo Google -->
-            <ul id="viewListSuggestion" class="list-group position-absolute w-100"></ul>     
+                <!-- Lista de sugestões usando classes bootstrap -->
+                <ul id="viewListSuggestion" class="list-group position-absolute w-100"></ul>
             </div>
- 
+
             <!-- Id -->
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <label for="inputIdClient" class="form-label">Id do cliente</label>
                 <input type="text" class="form-control" id="inputIdClient" spellcheck="false" maxlength="15" disabled>
             </div>
 
             <!-- Nome -->
-            <div class="col-md-5">
+            <div class="col-md-3">
                 <label for="inputNameClient" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="inputNameClient" spellcheck="false" maxlength="30" disabled>
             </div>
 
             <!-- Telefone -->
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <label for="inputPhoneClient" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="inputPhoneClient" spellcheck="false" maxlength="15"
                     disabled>
@@ -69,7 +74,7 @@
             <!-- Status -->
             <div class="col-md-4">
                 <label class="form-label">Status da OS</label>
-                <select class="form-select" id="osStatus">
+                <select class="form-select" id="inputStatus" required>
                     <option value="">Selecione</option>
                     <option>Aberta</option>
                     <option>Em andamento</option>
@@ -79,45 +84,52 @@
                 </select>
             </div>
             
+            <!-- Computador -->
             <div class="col-md-8">
-                <label class="form-label" id="inputEquipamento">Equipamento / Modelo</label>
-                <input type="text" class="form-control" id="inputEquipamento" maxlength="30" required>
+                <label class="form-label" for="inputComputer">Computador / Notebook</label>
+                <input type="text" class="form-control" id="inputComputer" maxlength="30" required>
             </div>
 
+            <!-- Número de série -->
             <div class="col-md-3">
-                <label class="form-label" id="inputSerial">Número de série</label>
+                <label class="form-label" for="inputSerial">Imei</label>
                 <input type="text" class="form-control" id="inputSerial" maxlength="20" >
             </div>
 
+            <!-- Problema relatado pelo cliente -->
             <div class="col-md-9">
-                <label class="form-label" id="inputDefeito">Problema relatado</label>
-                <input type="text" class="form-control" id="inputDefeito" maxlength="80" required>
+                <label class="form-label" for="inputProblem">Problema relatado</label>
+                <input type="text" class="form-control" id="inputProblem" maxlength="80" required>
             </div>
 
+            <!-- Tecnico especialista -->
             <div class="col-md-3">
-                <label class="form-label" id="inputTecnico">Técnico</label>
-                <input type="text" class="form-control" id="inputTecnico" maxlength="20" >
+                <label class="form-label" for="inputSpecialist">Técnico</label>
+                <input type="text" class="form-control" id="inputSpecialist" maxlength="20" >
             </div>
 
+            <!-- Diagnóstico técnico -->
             <div class="col-md-9">
-                <label class="form-label" id="inputDiagnostico">Diagnóstico técnico</label>
-                <input type="text" class="form-control" id="inputDiagnostico" maxlength="60">
+                <label class="form-label" for="inputDiagnosis">Diagnóstico técnico</label>
+                <input type="text" class="form-control" id="inputDiagnosis" maxlength="60">
             </div>
             
+            <!-- Peças -->
             <div class="col-md-9">
-                <label class="form-label" id="inputPecas">Peças</label>
-                <input type="text" class="form-control" id="inputpecas" maxlength="80">
+                <label class="form-label" for="inputParts">Peças</label>
+                <input type="text" class="form-control" id="inputParts" maxlength="80">
             </div>
 
+            <!-- Valor do serviço -->
             <div class="col-md-3">
-                <label class="form-label" id="inputValor">Valor</label>
-                <input type="text" class="form-control" id="inputValor" maxlength="20" >
+                <label class="form-label" for="inputTotal">Valor</label>
+                <input type="text" class="form-control" id="inputTotal" maxlength="20" >
             </div>
 
             <div class="mt-4 d-flex justify-content-center gap-1">
-                <button type="button" class="btn btn-success">Gerar OS</button>
-                <button type="button" class="btn btn-primary" onclick="inputOS()">Buscar OS</button>
-                <button type="button" class="btn btn-warning">Editar OS</button>
+                <button type="submit" class="btn btn-success">Gerar OS</button>
+                <button type="button" class="btn btn-primary" onclick="findOS()">Buscar OS</button>
+                <button type="submit" class="btn btn-warning">Editar OS</button>
                 <button type="button" class="btn btn-danger">Excluir OS</button>
                 <button type="button" class="btn btn-secondary">Imprimir OS</button>
                 <button type="reset" class="btn" id="btnReset" onclick="resetForm()"></button>
