--- a/src/views/os.html
+++ b/src/views/os.html
@@ -25,7 +25,7 @@
 
             <!-- Data -->
             <div class="col-md-3">
-                <label class="form-label">Data</label>
+                <label class="form-label">Data de entrada</label>
                 <input type="text" class="form-control" id="inputData" disabled>
             </div>
 
@@ -92,7 +92,7 @@
 
             <!-- Número de série -->
             <div class="col-md-3">
-                <label class="form-label" for="inputSerial">Imei</label>
+                <label class="form-label" for="inputSerial">Número de série</label>
                 <input type="text" class="form-control" id="inputSerial" maxlength="20" >
             </div>
 
