--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electron Tutorial</title>
-    <!-- Bootstrap.css -->
+    <!-- Título que será exibido na janela -->
+    <title>assis TI</title>
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="../public/css/style.css">
-    <!-- Impedir a execução de scripts externos ou não autorizados -->
+    <!-- impedir a execução de scripts externos ou não autorizados -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
 </head>
+
 <body>
-    
     <div class="container button">
         <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes" onclick="client()">
         <img src="../public/img/os.png" alt="computador" title="Emissão de OS" onclick="os()">
-        <img src="../public/img/TEC_SANCHES.png" alt="logo" id="logo">
+        <img src="../public/img/logo2.png" alt="logo" id="logo">
     </div>
-    
     <footer>
-        <!-- Exibição da data atual -->
         <p id="dataAtual"></p>
         <img src="../public/img/dboff.png" alt="dbicon" id="statusdb">
     </footer>
 
     <!-- Bootstrap -->
-    <script src="../public/js/bootstrap.bundle.min.js"></script>
-     <!--Scripts-->
+    <script src="../public/js/bootstrap.min.js"></script>
+    <!-- Scripts -->
     <script src="../public/js/script.js"></script>
-     <!-- Renderizador-->
-     <script src="renderer.js"></script>
+    <!-- Renderizador -->
+    <script src="renderer.js"></script>
 </body>
+
 </html>
